# rich-prompt

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: main.rs
src/cli/: commands.rs
src/core/: context_generator.rs  file_selector.rs  mod.rs
src/domain/: models.rs
src/infra/: file_system.rs  logger.rs  mod.rs  output.rs
