[package]
name = "rich-prompt"
version = "0.2.0"
edition = "2024"
description = "A Rust CLI tool for rich prompts with file and directory selection."
license = "MIT"
authors = ["Mohamed Abdelwahed"]
homepage = "https://github.com/sunduq-ai/rich-prompt"
repository = "https://github.com/sunduq-ai/rich-prompt"
readme = "README.md"
keywords = ["cli", "prompt", "prompt-context", "file-selection", "llm"]
categories = ["command-line-utilities"]
publish = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
anyhow = "1.0"
walkdir = "2.4"
log = "0.4"
env_logger = "0.11.8"
clipboard = "0.5"

[dev-dependencies]
tempfile = "3.8"