[package]
name = "rich-prompt"
version = "0.3.1"
edition = "2024"
description = "A Rust CLI tool for rich prompts with file and directory selection."
license = "MIT"
authors = ["Mohamed Abdelwahed"]
homepage = "https://github.com/sunduq-ai/rich-prompt"
repository = "https://github.com/sunduq-ai/rich-prompt"
readme = "README.md"
keywords = ["cli", "prompt", "prompt-context", "file-selection", "llm"]
categories = ["command-line-utilities"]
publish = true

[features]
default = ["clipboard-support"]
clipboard-support = ["clipboard"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
walkdir = "2.4"
log = "0.4"
env_logger = "0.11.8"
clipboard = { version = "0.5", optional = true }
ratatui = "0.29.0"
crossterm = "0.29.0"

[dev-dependencies]
tempfile = "3.8"